# rupturesRcpp

./: .Rbuildignore  DESCRIPTION  NAMESPACE  README  README.md
.github/workflows/: R-CMD-check.yaml
R/: PeltR6.R  R6template.R  RcppExports.R  WindowR6.R  binSegR6.R  costFuncR6.R  createCostFunc.R  peakDetector.R  rupturesRcpp-package.R  zzz.R
deprecated/: binSeg.cpp
deprecated/R/: binSegR6.R
deprecated/src/: binSeg.cpp
man/: Cost_L2.Rd  Cost_SIGMA.Rd  Cost_VAR.Rd  PELT.Rd  Window.Rd  binSeg.Rd  costFunc.Rd  createCostFunc.Rd  peakDetector.Rd
src/: Cost.cpp  Cost.h  CostBase.h  Cost_L2.cpp  Cost_L2.h  Cost_SIGMA.cpp  Cost_SIGMA.h  Cost_VAR.cpp  Cost_VAR.h  L1_cwMed.cpp  L1_cwMed.h  L2.cpp  L2.h  L2BinSeg.cpp  LinearL1.cpp  LinearL1.h  LinearL2.cpp  LinearL2.h  Makevars  PELT.cpp  RcppExports.cpp  SIGMA.cpp  SIGMA.h  VAR.cpp  VAR.h  baseClass.h  binSeg.cpp  ogkSIGMA.cpp  ogkSIGMA.h  tmplBinSeg.cpp  tmplPelt.cpp  tmplWindow.cpp
tests/: testthat.R
tests/testthat/: test-Cost_VAR.R  test-L2module.R  test-LinearL2.R  test-PELT.R  test-Python-ruptures-Pelt-L2.R  test-Window.R  test-binSeg.R  test-costFunc.R  test-cost_L2.R  test-cost_LinearL2.R  test-cost_costFunc.R  test-createCostFunc.R  test-segModule_PELT.R  test-segModule_Window.R  test-segModule_binSeg.R
tmp/: CMakeLists.txt  costL2.cpp  costL2.h  main.cpp  peltL2.cpp  peltL2.h  utils.cpp  utils.h
